@@ -1,4 +1,15 @@
 2004-08-29 Shane Landrum <epicene@pobox.com>
+	
+	* en/Gtk/TextSegCheckFunc.xml
+	* en/Gtk/TextSegCleanupFunc.xml
+	* en/Gtk/TextSegDeleteFunc.xml
+	* en/Gtk/TextSegLineChangeFunc.xml
+	* en/Gtk/TextSegSplitFunc.xml
+	* en/Gtk/TextLineSegment.xml
+	* en/Gtk/TextLineSegmentClass.xml: Marked 'do not use',
+	pending an answer on #64410.
+	
+2004-08-29 Shane Landrum <epicene@pobox.com>
 
 	* MarkDeletedArgs.xml
 	* MarkSetArgs.xml
